--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Backgammon Bet - Telegram Game</title>
+    <script src="https://unpkg.com/buffer@6.0.3/index.js"></script>
     <script>
       if (typeof global === 'undefined') {
         var global = globalThis;
+      }
+      // Buffer уже доступен через CDN
+      if (typeof Buffer !== 'undefined') {
+        window.Buffer = Buffer;
+        global.Buffer = Buffer;
       }
     </script>
   </head>
