--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/styles/PreSplashScreen.css">
     <title>Backgammon Bet - Telegram Game</title>
   </head>
   <body>
+    <div id="pre-splash-screen">
+      <div class="age-restriction">18+ ONLY</div>
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
